--- a/index.html
+++ b/index.html
@@ -41,20 +41,15 @@
                 </div>
             </div>
         </div>
-
-        <div class="container container-wide container-image">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <form action="" method="POST">
-                        <div class="form-group speech speech-blue">
-                            <p class="speech-blue-text">Подберём жильё посуточно в Казани за 5 минут</p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
     </header>
 
+    <div class="container subheader">
+                <form action="" method="POST">
+                    <div class="form-group speech speech-blue">
+                        <p class="speech-blue-text">Подберём жильё посуточно в Казани за 5 минут</p>
+                    </div>
+                </form>
+    </div>
 
     <div class="container container-address">
         <div class="row">
@@ -327,23 +322,22 @@
         </div>
     </div>
 
-    <!-- Пока скрыл -->
-    <!--<footer class="footer text-center">-->
-        <!--<div class="container">-->
-            <!--<div class="row">-->
-                <!--<div class="col-sm-12 col-xs-12">-->
-                    <!--<ul class="footer-nav">-->
-                        <!--<li><a href="#">Для собственников</a></li>-->
-                        <!--<li><a href="#">Правила сайта</a></li>-->
-                        <!--<li><a href="#">Наша команда</a></li>-->
-                        <!--<li><a href="#">Блог</a></li>-->
-                        <!--<li><a href="#">Отзывы</a></li>-->
-                        <!--<li><a href="#">Карта сайта</a></li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</footer>-->
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12">
+                    <ul class="footer-nav">
+                        <li><a href="#">Для собственников</a></li>
+                        <li><a href="#">Правила сайта</a></li>
+                        <li><a href="#">Наша команда</a></li>
+                        <li><a href="#">Блог</a></li>
+                        <li><a href="#">Отзывы</a></li>
+                        <li><a href="#">Карта сайта</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- ЭТО ОКНО ПОЯ-СЯ У ПЛАТНЫХ -->
     <form action="" class="modal multi-step" id="demo-modal-1">
